# vuln-scanner

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.example.toml  docker-compose.defectdojo.yml  docker-compose.scanner.yaml  docker-compose.scanner.yml  docker-compose.target.yaml  docker-compose.yaml  docker-compose.yml  main.py  poc.sh  pyproject.toml  scanner.sh
docs/: features-to-be-implemented.md
docs/supported-tools/: api-platform-integrations.md  container-kubernetes-security.md  exploitation.md  generic-multi-format.md  iac-cloud-security.md  mobile.md  network-infrastructure-scanning.md  reconnaissance.md  sast.md  sca-dependency-scanning.md  secret-scanning.md  ssl-tls.md  web-application-scanning.md
plugins/: example_plugin.py.disabled
reports/: report_20260713_230440.md  report_20260713_230922.md  report_example.md
reports/run_20260718_163039/: report.html  report.json  report.md
tests/: check_binaries.py  test_abstract_tool.py  test_auth.py  test_chaining.py  test_config.py  test_llm.py  test_nmap.py  test_nuclei.py  test_orchestrator_gating.py  test_plugins.py  test_port_router.py  test_reports.py  test_scope.py  test_target_typing.py  test_tool_parsers.py
vuln_scanner/: assets.py  model.py  orchestrator.py  pipeline.py  plugins.py  port_router.py  scope.py
vuln_scanner/config/: __init__.py  loader.py  models.py
vuln_scanner/defectdojo/: __init__.py  client.py
vuln_scanner/llm/: __init__.py  analyzer.py  client.py  features.py  models.py  prompts.py
vuln_scanner/poc/: __init__.py  models.py  (+2 more)
(+246 files in other folders)
